--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,7 +17,6 @@
     "express": "^4.18.2",
     "google-search-results-nodejs": "^2.1.0",
     "mongoose": "^7.2.0",
-    "node-telegram-bot-api": "^0.61.0",
-    "nodemon": "^2.0.22"
+    "node-telegram-bot-api": "^0.61.0"
   }
 }
